--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,15 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
     compile group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java'//, version: '3.141.59'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java'//, version: '3.14.0'
+
+    // webDriver 자동 설정 매니저
+    compile("io.github.bonigarcia:webdrivermanager:4.0.0")
 
     // Quartz
-    compile group: 'org.quartz-scheduler', name: 'quartz'
-    compile group: 'org.quartz-scheduler', name: 'quartz-jobs'
+    implementation 'org.springframework.boot:spring-boot-starter-quartz'
+//    compile group: 'org.quartz-scheduler', name: 'quartz'
+//    compile group: 'org.quartz-scheduler', name: 'quartz-jobs'
 }
 
 test {
